[package]
name = "talk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0", features = [ "derive" ] }
bincode = { version = "~1.3" }

snafu = { version = "~0.6" }

rand = { version = "0.7" }
blake3 = { version = "1.0.0" }
ed25519-dalek = { version = "1.0.1", features = [ "serde", "batch" ] }
x25519-dalek = { version = "1.2.0", features = [ "serde" ] }
blst = { version = "0.3.5" }
chacha20poly1305 = { version = "0.9.0" }